--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ html {
   font-family: "Lexend Deca", -apple-system, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: black;
   color: white;
+  z-index: -1;
 }
 
 * {
@@ -40,6 +41,16 @@ h3 {
   text-align: center;
 }
 
+.sidenav {
+  padding-top: 1em;
+}
+
+.sidenav li{
+  padding-bottom: .5em;
+}
+.sidenav li:first-child{
+  padding-bottom: 1em;
+}
 
 .sidenav-trigger {
   color: #1f2e6e;
